--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
   height: 30px;
   margin-top: 30px;
   font-weight: bolder;
+  margin-bottom: 41px;
 }
 
 #banner button:hover{
@@ -35,7 +36,7 @@
   font-size: 30px;
 }
 #beneficios img{
-  margin-top: 33px;
+  margin-top: 80px;
 }
 
 #ilustracao{
