--- a/css/alunos.css
+++ b/css/alunos.css
@@ -66,7 +66,7 @@ form {
     color: black;
     border: black;
     background-color: #FF7E00;
-    border: black 1px solid;
+    border: white 1px solid;
 }
 
 #footer {
