--- a/css/controle.css
+++ b/css/controle.css
@@ -40,7 +40,6 @@ h1 {
 }
 
 #footer {
-    background-color: #FF7E00;
-    border-top: 5px solid white;
+    background-color: white;
     margin-top: 100px;
 }
