Adicionando voltar ao topo

--- a/css/alunos.css
+++ b/css/alunos.css
@@ -60,6 +60,7 @@ form {
     border: none;
     color: white;
     font-weight: bolder;
+    padding: 6px;
 }
 
 #alunosAtivos button:hover {
@@ -83,4 +84,20 @@ form {
 #footer p,
 #footer a {
     font-weight: 500;
+}
+
+#footer img {
+    height: 80px;
+}
+
+a[href="#top"] {
+    padding: 10px;
+    top: 90%;
+    right: 40px;
+    display: none;
+    font-size: 30px;
+}
+
+a[href="#top"]:hover {
+    text-decoration: none;
 }
