--- a/css/crie.css
+++ b/css/crie.css
@@ -4,7 +4,7 @@ h1 {
 }
 
 .wrapper {
-    width: 100vw;
+    width: 100%;
     height: 70vh;
     display: flex;
     margin-bottom: 50px;
@@ -116,6 +116,7 @@ h1 {
     border: none;
     color: white;
     font-weight: bolder;
+    padding: 7px;
 }
 
 #alunosAtivos button:hover {
@@ -138,4 +139,20 @@ h1 {
 #footer p,
 #footer a {
     font-weight: 500;
+}
+
+#footer img {
+    height: 80px;
+}
+
+a[href="#top"] {
+    padding: 10px;
+    top: 90%;
+    right: 40px;
+    display: none;
+    font-size: 30px;
+}
+
+a[href="#top"]:hover {
+    text-decoration: none;
 }
