--- a/css/index.css
+++ b/css/index.css
@@ -84,7 +84,7 @@
 
 #ilustracao button:hover {
     color: black;
-    border: black;
+    border: 1px solid black;
     background-color: white;
 }
 
