--- a/css/controle.css
+++ b/css/controle.css
@@ -66,3 +66,9 @@ a[href="#top"] {
 a[href="#top"]:hover {
     text-decoration: none;
 }
+
+@media(max-width:460px) {
+    h1 {
+        margin-left: 4vh;
+    }
+}
