--- a/css/crie.css
+++ b/css/crie.css
@@ -156,3 +156,9 @@ a[href="#top"] {
 a[href="#top"]:hover {
     text-decoration: none;
 }
+
+@media(max-width:460px) {
+    h1 {
+        margin-left: -1vh;
+    }
+}
