--- a/css/crie.css
+++ b/css/crie.css
@@ -1,13 +1,9 @@
-h1 {
-    font-weight: bold;
-    margin-left: 10vh;
-}
-
 .wrapper {
+    margin-top: 80px;
+    margin-bottom: 50px;
     width: 100%;
     height: 70vh;
     display: flex;
-    margin-bottom: 50px;
 }
 
 #calendario {
