--- a/css/controle.css
+++ b/css/controle.css
@@ -16,12 +16,11 @@
 }
 
 .quadrado2 {
-    background: #52c234;
+    background: #56ab2f;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right #061700, #52c234);
+    background: -webkit-linear-gradient(to left, #a8e063, #56ab2f);
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #061700, #52c234);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to left, #a8e063, #56ab2f);
 }
 
 .baixoQuadrado {
