--- a/css/index.css
+++ b/css/index.css
@@ -47,8 +47,75 @@
     font-size: 30px;
 }
 
-#beneficios img {
+#beneficios svg {
     margin-top: 80px;
+}
+
+#gestao,
+#quality,
+#alunos,
+#iconG,
+#iconQ,
+#iconQ2,
+#iconA,
+#retanguloG,
+#retanguloQ,
+#retanguloA {
+    -webkit-transition: 300ms all;
+    transition: 250ms all;
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+}
+
+
+/* GESTÃO */
+
+#gestao:hover #retanguloG {
+    fill: #FF7E00;
+    -webkit-transform: rotate(404deg);
+    transform: rotate(404deg) scale(1.3);
+}
+
+#gestao:hover #iconG {
+    stroke: #FFFFFF;
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+}
+
+
+/* QUALIDADE */
+
+#quality:hover #retanguloQ {
+    fill: #FF7E00;
+    -webkit-transform: rotate(404deg);
+    transform: rotate(404deg) scale(1.3);
+}
+
+#quality:hover #iconQ {
+    stroke: #FFFFFF;
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+}
+
+#quality:hover #iconQ2 {
+    stroke: #FFFFFF;
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+}
+
+
+/* ALUNOS */
+
+#alunos:hover #retanguloA {
+    fill: #FF7E00;
+    -webkit-transform: rotate(404deg);
+    transform: rotate(404deg) scale(1.3);
+}
+
+#alunos:hover #iconA {
+    stroke: #FFFFFF;
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
 }
 
 #ilustracao {
