--- a/pages/index/index.css
+++ b/pages/index/index.css
@@ -287,3 +287,14 @@ a[href="#top"]:hover {
         font-size: 35px;
     }
 }
+
+
+/* PWA */
+
+.pwa__alert {
+    background: orange;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+    display: none;
+}
