--- a/pages/crie/crie.css
+++ b/pages/crie/crie.css
@@ -158,3 +158,9 @@ a[href="#top"] {
 a[href="#top"]:hover {
     text-decoration: none;
 }
+
+@media (max-width:600px) {
+    .wrapper {
+        margin-top: 10px;
+    }
+}
