--- a/pages/sobre/sobre.css
+++ b/pages/sobre/sobre.css
@@ -123,3 +123,9 @@ a[href="#top"]:hover {
 .card-move-up .move-up {
     padding: 20px;
 }
+
+@media (max-width:600px) {
+    #sobre img {
+        margin: 80px 0;
+    }
+}
