--- a/pages/cadastro/cadastro.css
+++ b/pages/cadastro/cadastro.css
@@ -1,3 +1,25 @@
+.loader {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+}
+
+.loader.hidden {
+    animation: fadeOut 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
 .logout {
     background-color: #f0f0f5;
     box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
