--- a/pages/crie/crie.css
+++ b/pages/crie/crie.css
@@ -1,3 +1,25 @@
+.loader {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+}
+
+.loader.hidden {
+    animation: fadeOut 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
 .wrapper {
     margin-top: 80px;
     margin-bottom: 50px;
