--- a/pages/alunos/alunos.css
+++ b/pages/alunos/alunos.css
@@ -13,6 +13,11 @@
     animation-fill-mode: forwards;
 }
 
+.loader img {
+    margin-top: 80px;
+    width: 400px;
+}
+
 @keyframes fadeOut {
     100% {
         opacity: 0;
@@ -135,5 +140,9 @@ a[href="#top"]:hover {
     }
     .quadrado h2 {
         font-size: 38px;
+    }
+    .loader img {
+        margin-top: 0;
+        width: 300px;
     }
 }
