--- a/pages/cadastro/cadastro.css
+++ b/pages/cadastro/cadastro.css
@@ -13,6 +13,11 @@
     animation-fill-mode: forwards;
 }
 
+.loader img {
+    margin-top: 80px;
+    width: 400px;
+}
+
 @keyframes fadeOut {
     100% {
         opacity: 0;
@@ -105,4 +110,11 @@ form .btn:hover {
 
 #form .input-field label {
     color: #000;
+}
+
+@media (max-width:600px) {
+    .loader img {
+        margin-top: 0;
+        width: 300px;
+    }
 }
