--- a/pages/controle/controle.css
+++ b/pages/controle/controle.css
@@ -13,6 +13,11 @@
     animation-fill-mode: forwards;
 }
 
+.loader img {
+    margin-top: 80px;
+    width: 400px;
+}
+
 @keyframes fadeOut {
     100% {
         opacity: 0;
@@ -102,5 +107,9 @@ a[href="#top"]:hover {
     }
     #pagamentos h2 {
         font-size: 48px;
+    }
+    .loader img {
+        margin-top: 0;
+        width: 300px;
     }
 }
