--- a/pages/crie/crie.css
+++ b/pages/crie/crie.css
@@ -13,6 +13,11 @@
     animation-fill-mode: forwards;
 }
 
+.loader img {
+    margin-top: 80px;
+    width: 400px;
+}
+
 @keyframes fadeOut {
     100% {
         opacity: 0;
@@ -184,5 +189,9 @@ a[href="#top"]:hover {
 @media (max-width:600px) {
     .wrapper {
         margin-top: 10px;
+    }
+    .loader img {
+        margin-top: 0;
+        width: 300px;
     }
 }
