--- a/pages/sobre/sobre.css
+++ b/pages/sobre/sobre.css
@@ -13,6 +13,11 @@
     animation-fill-mode: forwards;
 }
 
+.loader img {
+    margin-top: 80px;
+    width: 400px;
+}
+
 @keyframes fadeOut {
     100% {
         opacity: 0;
@@ -149,5 +154,9 @@ a[href="#top"]:hover {
 @media (max-width:600px) {
     #sobre img {
         margin: 80px 0;
+    }
+    .loader img {
+        margin-top: 0;
+        width: 300px;
     }
 }
