--- a/pages/cadastro/cadastro.css
+++ b/pages/cadastro/cadastro.css
@@ -115,6 +115,6 @@ form .btn:hover {
 @media (max-width:600px) {
     .loader img {
         margin-top: 0;
-        width: 300px;
+        max-height: fit-content;
     }
 }
