--- a/pages/financas/financas.css
+++ b/pages/financas/financas.css
@@ -134,6 +134,6 @@ a[href="#top"]:hover {
     }
     .loader img {
         margin-top: 0;
-        width: 300px;
+        max-height: fit-content;
     }
 }
