--- a/pages/sobre/sobre.css
+++ b/pages/sobre/sobre.css
@@ -157,6 +157,6 @@ a[href="#top"]:hover {
     }
     .loader img {
         margin-top: 0;
-        width: 300px;
+        max-height: fit-content;
     }
 }
