--- a/pages/treino/treino.css
+++ b/pages/treino/treino.css
@@ -60,6 +60,6 @@ a[href="#top"]:hover {
 @media (max-width:600px) {
     .loader img {
         margin-top: 0;
-        max-height: fit-content;
+        max-height: 100vh;
     }
 }
