--- a/pages/alunos/alunos.css
+++ b/pages/alunos/alunos.css
@@ -145,4 +145,10 @@ a[href="#top"]:hover {
         margin-top: 0;
         max-height: 100vh;
     }
+    .quadrado img {
+        display: none;
+    }
+    #alunos h2 {
+        margin-top: 40px;
+    }
 }
