--- a/pages/controle/controle.css
+++ b/pages/controle/controle.css
@@ -112,4 +112,18 @@ a[href="#top"]:hover {
         margin-top: 0;
         max-height: 100vh;
     }
+    .quadrado img {
+        display: none;
+    }
+    #alunos h2 {
+        margin: 50px 0;
+        font-size: 35px;
+    }
+    .quadrado2 img {
+        display: none;
+    }
+    #pagamentos h2 {
+        margin: 50px 0;
+        font-size: 45px;
+    }
 }
