--- a/pages/entrar/login.css
+++ b/pages/entrar/login.css
@@ -100,4 +100,13 @@ form .btn:hover {
         margin-top: 0;
         max-height: 100vh;
     }
+    #banner h1 {
+        margin-top: 50%;
+    }
+    .logo {
+        padding-top: 10px;
+    }
+    form .btn {
+        width: 260px;
+    }
 }
