--- a/pages/cadastro/cadastro.css
+++ b/pages/cadastro/cadastro.css
@@ -128,7 +128,7 @@ form .btn:hover {
         margin-top: 10vh;
     }
     form {
-        padding-top: 25px;
+        padding-top: 20vh;
     }
     form .btn {
         width: 87%;
