--- a/pages/cadastro/cadastro.css
+++ b/pages/cadastro/cadastro.css
@@ -106,6 +106,11 @@ form .btn:hover {
     box-shadow: 0 1px 0 0 #ff7e00;
 }
 
+#form .input-field input[type=number]:focus {
+    border-bottom: 1px solid #ff7e00;
+    box-shadow: 0 1px 0 0 #ff7e00;
+}
+
 #form .input-field.prefix.active {
     color: #ff7e00;
 }
