--- a/pages/entrar/login.css
+++ b/pages/entrar/login.css
@@ -67,6 +67,10 @@ form .btn:hover {
     color: #000;
 }
 
+#form .input-field .prefix.active {
+    color: #ff7e00;
+}
+
 .logo {
     padding-top: 200px;
 }
