--- a/pages/financas/financas.css
+++ b/pages/financas/financas.css
@@ -75,12 +75,17 @@
 
 .card2 {
     background: #FDC830;
-    /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #F37335, #FDC830);
-    /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #F37335, #FDC830);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     height: 157px;
+}
+
+#lista {
+    margin-bottom: 100px;
+}
+
+#tabledata {
+    margin-bottom: 200px;
 }
 
 .listaAluno {
@@ -142,5 +147,8 @@ a[href="#top"]:hover {
     }
     canvas {
         margin-bottom: 30vh;
+    }
+    lista {
+        margin-top: 80px;
     }
 }
