Altrenado input para tel

--- a/pages/cadastro/cadastro.css
+++ b/pages/cadastro/cadastro.css
@@ -93,6 +93,7 @@ form .btn:hover {
 
 #form .input-field input[type=password]:focus,
 #form .input-field input[type=text]:focus,
+#form .input-field input[type=tel]:focus,
 #form .input-field input[type=email]:focus {
     border-bottom: 1px solid #ff7e00;
     box-shadow: 0 1px 0 0 #ff7e00;
