--- a/pages/cadastroAluno/cadastroAlunos.css
+++ b/pages/cadastroAluno/cadastroAlunos.css
@@ -68,6 +68,7 @@ form .btn:hover {
 
 #form .input-field input[type=date]:focus,
 #form .input-field input[type=email]:focus,
+#form .input-field input[type=tel]:focus,
 #form .input-field input[type=text]:focus {
     border-bottom: 1px solid #ff7e00;
     box-shadow: 0 1px 0 0 #ff7e00;
