--- a/pages/EditarAluno/editarAluno.css
+++ b/pages/EditarAluno/editarAluno.css
@@ -54,6 +54,7 @@ form .btn {
     background-color: #ff7e00;
     border-radius: 8px;
     width: 100%;
+    font-weight: bold;
 }
 
 form .btn:hover {
@@ -63,6 +64,7 @@ form .btn:hover {
 
 #form .input-field input[type=date]:focus,
 #form .input-field input[type=email]:focus,
+#form .input-field input[type=tel]:focus,
 #form .input-field input[type=text]:focus {
     border-bottom: 1px solid #ff7e00;
     box-shadow: 0 1px 0 0 #ff7e00;
@@ -74,6 +76,10 @@ form .btn:hover {
 
 #form .input-field label {
     color: #000;
+}
+
+.error {
+    color: red;
 }
 
 @media (max-width:600px) {
