--- a/pages/cadastro/cadastro.css
+++ b/pages/cadastro/cadastro.css
@@ -65,7 +65,7 @@ body {
 }
 
 form {
-    margin-top: 130px;
+    margin-top: 80px;
 }
 
 form span {
@@ -81,6 +81,8 @@ form span:hover {
 }
 
 form .btn {
+    font-weight: bold;
+    margin-top: 10px;
     background-color: #ff7e00;
     border-radius: 8px;
     width: 591px;
@@ -105,6 +107,10 @@ form .btn:hover {
 
 #form .input-field label {
     color: #000;
+}
+
+.error {
+    color: red;
 }
 
 @media (max-width:600px) {
