--- a/pages/cadastro/cadastro.css
+++ b/pages/cadastro/cadastro.css
@@ -85,7 +85,7 @@ form .btn {
     margin-top: 10px;
     background-color: #ff7e00;
     border-radius: 8px;
-    width: 591px;
+    width: 100%;
 }
 
 form .btn:hover {
