--- a/views/financas.ejs
+++ b/views/financas.ejs
@@ -35,7 +35,7 @@
                     <li><a href="/home/alunos" class="black-text">Alunos</a></li>
                     <li><a href="/home" class="black-text">Crie</a></li>
                     <li><a href="/home/financas" class="orange-text">Finanças</a></li>
-                    <li><a href="/" class="black-text">Sair</a></li>
+                    <li><a href="/logout" class="black-text">Sair</a></li>
                 </ul>
             </div>
         </nav>
@@ -46,7 +46,7 @@
         <li><a href="/home/alunos" class="black-text">Alunos</a></li>
         <li><a href="/home" class="black-text">Crie</a></li>
         <li><a href="/home/financas" class="orange-text">Finanças</a></li>
-        <li><a href="/" class="black-text">Sair</a></li>
+        <li><a href="/logout" class="black-text">Sair</a></li>
     </ul>
 
 
@@ -149,7 +149,7 @@
                         <li><a class="white-text text-lighten-3" href="/home/alunos">Alunos</a></li>
                         <li><a class="white-text text-lighten-3" href="/home">Crie</a></li>
                         <li><a class="white-text text-lighten-3" href="/home/financas">Finanças</a></li>
-                        <li><a class="white-text text-lighten-3" href="/">Sair</a></li>
+                        <li><a class="white-text text-lighten-3" href="/logout">Sair</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
