--- a/views/crie.ejs
+++ b/views/crie.ejs
@@ -34,7 +34,7 @@
                     <li><a href="/home/alunos" class="black-text">Alunos</a></li>
                     <li><a href="#" class="orange-text">Crie</a></li>
                     <li><a href="/home/financas" class="black-text">Finanças</a></li>
-                    <li><a href="/" class="black-text">Sair</a></li>
+                    <li><a href="/logout" class="black-text">Sair</a></li>
                 </ul>
             </div>
         </nav>
@@ -45,7 +45,7 @@
         <li><a href="/home/alunos" class="black-text">Alunos</a></li>
         <li><a href="#" class="orange-text">Crie</a></li>
         <li><a href="/home/financas" class="black-text">Finanças</a></li>
-        <li><a href="/" class="black-text">Sair</a></li>
+        <li><a href="/logout" class="black-text">Sair</a></li>
     </ul>
 
     <!-- Lista dos alunos -->
@@ -224,7 +224,7 @@
                             <li><a class="white-text text-lighten-3" href="/home/alunos">Alunos</a></li>
                             <li><a class="white-text text-lighten-3" href="">Crie</a></li>
                             <li><a class="white-text text-lighten-3" href="/home/financas">Finanças</a></li>
-                            <li><a class="white-text text-lighten-3" href="/">Sair</a></li>
+                            <li><a class="white-text text-lighten-3" href="/logout">Sair</a></li>
                         </ul>
                     </div>
                     <div class="col l1 s4 right">
