--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,6 +18,36 @@
     <div class="center-align loader">
         <img src="/img/bike.svg" alt="Loader" class="responsive-img">
     </div>
+    <div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper #ffffff white">
+                <!-- Logo -->
+                <a href="#" class="brand-logo"><img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
+                </a>
+
+                <!-- Ícone para abrir no Mobile -->
+                <a href="#" data-target="mobile-navbar" class="sidenav-trigger">
+                    <i class="material-icons black-text">menu</i>
+                </a>
+
+                <ul id="navbar-items" class="right hide-on-med-and-down">
+                    <li><a href="/" class="black-text">Home</a></li>
+                    <li><a href="/sobre" class="black-text">Sobre</a></li>
+                    <li><a href="#" class="orange-text" aria-label="Entrar">Entrar</a></li>
+                    <li><a href="/cadastro" class="black-text">Registrar</a></li>
+                </ul>
+
+            </div>
+        </nav>
+    </div>
+
+    <!-- Menu Mobile -->
+    <ul id="mobile-navbar" class="sidenav">
+        <li><a href="/" class="black-text">Home</a></li>
+        <li><a href="/sobre" class="black-text">Sobre</a></li>
+        <li><a href="#" class="orange-text">Entrar</a></li>
+        <li><a href="/cadastro" class="black-text">Registrar</a></li>
+    </ul>
 
     <div class="row">
 
@@ -30,13 +60,13 @@
             <form id="form" action="/login" method="POST">
                 <div class="input-field">
                     <i class="material-icons prefix">account_circle</i>
-                    <input id="email" type="email" name="email" class="validate">
-                    <label for="email">E-mail</label>
+                    <input id="email" type="email" name="email" class="validate" placeholder="Digite seu email">
+                    
                 </div>
                 <div class="input-field">
                     <i class="material-icons prefix">lock_outline</i>
-                    <input id="senha" type="password" name="senha" class="validate">
-                    <label for="senha">Senha</label>
+                    <input id="senha" type="password" name="senha" class="validate" placeholder="Digite sua senha">
+                    
                 </div>
                 <div class="input-field">
                     <button id="btn" class="btn waves-effect waves-light right submit" type="submit" name="action">Entrar</button>
