--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -74,40 +74,42 @@
     <div id="time">
         <div class="row ">
             <div class="container">
+
+                <% for (membro of equipe) { %>
                 <div class="col s12 m6 l6">
                     <div id="profile-card" class="card">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="/img/8.png" alt="user bg">
                         </div>
                         <div class="card-content">
-                            <img src="/img/diogo.png" alt="Diogo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <img src="<%= membro.img %>" alt="membro" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
                                 <i class="material-icons">add</i>
                             </a>
-                            <span class="card-title activator grey-text text-darken-4">Diogo</span>
+                            <span class="card-title activator grey-text text-darken-4"><%= membro.nome %></span>
                             <p>
-                                <i class="material-icons">perm_identity</i>Sei lá</p>
+                                <i class="material-icons">perm_identity</i><%= membro.funcao %></p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="<%= membro.site %>" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
                             <p>
-                                <i class="material-icons">email</i> yourmail@domain.com</p>
+                                <i class="material-icons">email</i> <%= membro.email %></p>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Diogo
+                            <span class="card-title grey-text text-darken-4"><%= membro.nome %>
                                 <i class="material-icons right">close</i>
                             </span>
                             <p>Mais informações.</p>
                             <p>
-                                <i class="material-icons">perm_identity</i>Sei lá</p>
+                                <i class="material-icons">perm_identity</i><%= membro.funcao %></p>
                             <p>
-                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
+                                <i class="material-icons">code</i><a href="<%= membro.site %>" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
                             <p>
-                                <i class="material-icons">email</i> yourmail@domain.com
+                                <i class="material-icons">email</i> <%= membro.email %>
                             </p>
                             <p>
                             </p>
                             <p>
-                                <i class="material-icons">airplanemode_active</i> Brasil
+                                <i class="material-icons">airplanemode_active</i> <%= membro.location %>
                             </p>
                             <p>
                             </p>
@@ -115,127 +117,7 @@
                     </div>
                 </div>
 
-                <div class="col s12 m6 l6">
-                    <div id="profile-card2" class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="/img/8.png" alt="user bg">
-                        </div>
-                        <div class="card-content">
-                            <img src="/img/paulo.png" alt="Paulo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
-                            <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
-                                <i class="material-icons">add</i>
-                            </a>
-                            <span class="card-title activator grey-text text-darken-4">Paulo Ernesto</span>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Sei lá</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
-                            <p>
-                                <i class="material-icons">email</i> yourmail@domain.com</p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Paulo Ernesto
-                                <i class="material-icons right">close</i>
-                            </span>
-                            <p>Mais informações.</p>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Sei lá</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
-                            <p>
-                                <i class="material-icons">email</i> yourmail@domain.com
-                            </p>
-                            <p>
-                            </p>
-                            <p>
-                                <i class="material-icons">airplanemode_active</i> Brasil
-                            </p>
-                            <p>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col s12 m6 l6">
-                    <div id="profile-card3" class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="/img/8.png" alt="user bg">
-                        </div>
-                        <div class="card-content">
-                            <img src="/img/rafael.jpg" alt="Rafael" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
-                            <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
-                                <i class="material-icons">add</i>
-                            </a>
-                            <span class="card-title activator grey-text text-darken-4">Rafael Santana</span>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Sei lá</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
-                            <p>
-                                <i class="material-icons">email</i> yourmail@domain.com</p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Rafael Santana
-                                <i class="material-icons right">close</i>
-                            </span>
-                            <p>Mais informações.</p>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Sei lá</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
-                            <p>
-                                <i class="material-icons">email</i> yourmail@domain.com
-                            </p>
-                            <p>
-                            </p>
-                            <p>
-                                <i class="material-icons">airplanemode_active</i> Brasil
-                            </p>
-                            <p>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col s12 m6 l6">
-                    <div id="profile-card4" class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="/img/8.png" alt="user bg">
-                        </div>
-                        <div class="card-content">
-                            <img src="/img/roni.png" alt="Roni" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
-                            <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
-                                <i class="material-icons">add</i>
-                            </a>
-                            <span class="card-title activator grey-text text-darken-4">Rony Cleber</span>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Scrum Master</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
-                            <p>
-                                <i class="material-icons">email</i> yourmail@domain.com</p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Rony Cleber
-                                <i class="material-icons right">close</i>
-                            </span>
-                            <p>Mais informações.</p>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Scrum Master</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
-                            <p>
-                                <i class="material-icons">email</i> yourmail@domain.com</p>
-                            <p>
-                            </p>
-                            <p>
-                                <i class="material-icons">airplanemode_active</i> Brasil
-                            </p>
-                            <p>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                <% } %>
 
             </div>
         </div>
@@ -254,36 +136,36 @@
             <div class="col s12 m12 l6">
                 <div>
                     <div class="row">
-                        <form class="col s12">
+                        <form action="/sobre" class="col s12" method="POST">
                             <div class="row">
                                 <div class="input-field col s12">
                                     <i class="material-icons prefix">account_circle</i>
-                                    <input id="name" type="text" class="validate">
+                                    <input id="name" type="text" name="nome" class="validate">
                                     <label for="name">Nome</label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
                                     <i class="material-icons prefix">email</i>
-                                    <input id="email" type="email" class="validate">
+                                    <input id="email" type="email" name="email" class="validate">
                                     <label for="email">Email</label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
                                     <i class="material-icons prefix">archive</i>
-                                    <input id="cv" type="file" class="validate">
+                                    <input id="cv" type="file" class="validate" name="file">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
                                     <i class="material-icons prefix">question_answer</i>
-                                    <textarea id="message" class="materialize-textarea validate" length="120"></textarea>
+                                    <textarea id="message" class="materialize-textarea validate" name="message" length="120"></textarea>
                                     <label for="message">Menssagem</label>
                                 </div>
                                 <div class="row">
                                     <div class="input-field col s12">
-                                        <button class="btn waves-effect waves-light right orange" type="submit" name="action">Enviar
+                                        <button class="btn waves-effect waves-light right orange" type="submit" >Enviar
                                             <i class="material-icons right">send</i>
                                         </button>
                                     </div>
